# implicit-surface-triangulation

./: .gitignore  .gitmodules  CMakeLists.txt  ImplicitSurfaceTriangulation.sln  README.md  cdt.cc  cdt.hh  makefile  test.cc
ImplicitSurfaceTriangulation/: ClosestNeighbours.cpp  FillingPhase.cpp  FillingPhase.hpp  GrowingPhase.cpp  ImplicitSurfaceTriangulation.cpp  ImplicitSurfaceTriangulation.vcxproj  ImplicitSurfaceTriangulation.vcxproj.filters  KarkanisStewartTessellator.cpp  Plane.cpp  Triangle.cpp  VectorMath.cpp  glmMeshAdaptor.cpp  vcpkg.json
ImplicitSurfaceTriangulation/Include/: ClosestNeighbours.hpp  FillingPhase.cpp  FillingPhase.hpp  GrowingPhase.hpp  ImplicitDifferentiated.hpp  ImplicitSurfaceTriangulation.hpp  KarkanisStewartTessellator.hpp  Phase.hpp  Plane.hpp  Triangle.hpp  VectorMath.hpp  glmMeshAdaptor.hpp  glmMeshKdTree.hpp
SurfaceTriangulationDemoApp/: Box.cpp  Box.hpp  GlutInitializer.cpp  GlutInitializer.hpp  ImGuiLog.cpp  ImGuiLog.hpp  Mesh.cpp  Mesh.hpp  SurfaceTriangulationDemo.cpp  SurfaceTriangulationDemo.hpp  SurfaceTriangulationDemoApp.vcxproj  SurfaceTriangulationDemoApp.vcxproj.filters  imgui.ini  main.cpp  vcpkg.json
SurfaceTriangulationDemoApp/Common/: Camera.cpp  Camera.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
SurfaceTriangulationDemoApp/ImGui/: imgui_impl_glut.cpp
SurfaceTriangulationDemoApp/shaders/: mesh.fs  mesh.vs
docs/: Doxyfile
inc/: Aabb.hpp  Color.hpp  DrawUtils.hpp  ImplicitBlend.hpp  ImplicitDifference.hpp  ImplicitIntersect.hpp  ImplicitLine.hpp  ImplicitObject.hpp  ImplicitOperator.hpp  ImplicitPrimitive.hpp  ImplicitRotate.hpp  ImplicitScale.hpp  ImplicitSphere.hpp  ImplicitSystem.hpp  ImplicitTorus.hpp  ImplicitTransform.hpp  ImplicitTranslate.hpp  ImplicitUnion.hpp  VecPrint.hpp  common.hpp  fieldFunctions.hpp  floatlibs.hpp
include/: constants.hh  types.hh  util.hh
src/: Aabb.cpp  DrawUtils.cpp  ImplicitBlend.cpp  ImplicitDifference.cpp  ImplicitIntersect.cpp  ImplicitLine.cpp  ImplicitObject.cpp  ImplicitOperator.cpp  ImplicitPrimitive.cpp  ImplicitRotate.cpp  ImplicitScale.cpp  ImplicitSphere.cpp  ImplicitTorus.cpp  ImplicitTransform.cpp  ImplicitTranslate.cpp  ImplicitUnion.cpp  VecPrint.cpp  fieldFunctions.cpp  main.cpp  util.cc
test/: util.cc
